# neighborhood-library-service

./: ARCHITECTURE.md  DEVELOPER.md  README.md  readme.md
apis/: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml
apis/app/: __init__.py  factory.py  py.typed
apis/app/api/: __init__.py
apis/app/api/routes/: __init__.py  books.py  health.py  loans.py  members.py
apis/app/db/: __init__.py  base.py  config.py  session.py
apis/app/models/: __init__.py  book.py  book_copy.py  loan.py  member.py
apis/app/repositories/: __init__.py  book_copy_repository.py  book_repository.py  loan_repository.py  member_repository.py
apis/app/schemas/: __init__.py  book.py  book_copy.py  health.py  loan.py  member.py
apis/app/services/: __init__.py  book_service.py  loan_service.py  member_service.py
apis/scripts/: entrypoint.sh  migrate.py  seed_data.py
deploy/: README.md  docker-compose.yml
web/: .dockerignore  .env.local.example  .gitignore  Dockerfile  README.md  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/components/: BooksSection.tsx  BorrowReturnSection.tsx  CopiesSection.tsx  LibraryLogo.tsx  LoansSection.tsx  MembersSection.tsx
